Update error message and update swagger configuration
