# restapi/operations/create_user_responses.go
@@ -1,0 +1,149 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/wexinc/ps-tag-onboarding-go/models"
+)
+
+// CreateUserCreatedCode is the HTTP code returned for type CreateUserCreated
+const CreateUserCreatedCode int = 201
+
+/*
+CreateUserCreated User
+
+swagger:response createUserCreated
+*/
+type CreateUserCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.User `json:"body,omitempty"`
+}
+
+// NewCreateUserCreated creates CreateUserCreated with default headers values
+func NewCreateUserCreated() *CreateUserCreated {
+
+	return &CreateUserCreated{}
+}
+
+// WithPayload adds the payload to the create user created response
+func (o *CreateUserCreated) WithPayload(payload *models.User) *CreateUserCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create user created response
+func (o *CreateUserCreated) SetPayload(payload *models.User) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateUserCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateUserBadRequestCode is the HTTP code returned for type CreateUserBadRequest
+const CreateUserBadRequestCode int = 400
+
+/*
+CreateUserBadRequest MessageErr
+
+swagger:response createUserBadRequest
+*/
+type CreateUserBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MessageErr `json:"body,omitempty"`
+}
+
+// NewCreateUserBadRequest creates CreateUserBadRequest with default headers values
+func NewCreateUserBadRequest() *CreateUserBadRequest {
+
+	return &CreateUserBadRequest{}
+}
+
+// WithPayload adds the payload to the create user bad request response
+func (o *CreateUserBadRequest) WithPayload(payload *models.MessageErr) *CreateUserBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create user bad request response
+func (o *CreateUserBadRequest) SetPayload(payload *models.MessageErr) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateUserInternalServerErrorCode is the HTTP code returned for type CreateUserInternalServerError
+const CreateUserInternalServerErrorCode int = 500
+
+/*
+CreateUserInternalServerError MessageErr
+
+swagger:response createUserInternalServerError
+*/
+type CreateUserInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MessageErr `json:"body,omitempty"`
+}
+
+// NewCreateUserInternalServerError creates CreateUserInternalServerError with default headers values
+func NewCreateUserInternalServerError() *CreateUserInternalServerError {
+
+	return &CreateUserInternalServerError{}
+}
+
+// WithPayload adds the payload to the create user internal server error response
+func (o *CreateUserInternalServerError) WithPayload(payload *models.MessageErr) *CreateUserInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create user internal server error response
+func (o *CreateUserInternalServerError) SetPayload(payload *models.MessageErr) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
